--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,19 +4,12 @@ spring.application.name=ecom.proj
 #spring.datasource.url=jdbc:h2:mem:ecommerce
 #spring.datasource.driverClassName=org.h2.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/ecom
-spring.datasource.username=root
-spring.datasource.password=root@123
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USER}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-##vault configuration
-#spring.cloud.vault.uri=http://127.0.0.1:8200
-#spring.cloud.vault.token=root
-#spring.cloud.vault.kv.enabled=true
-#spring.cloud.vault.kv.backend=secret
-#spring.cloud.vault.kv.default-context=myapp
-
-
+frontend.url=${FRONTEND_URL}
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -24,3 +17,25 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #before writing this below, we are getting table "product" not found coz the query which we wrote in data1.sql will run first before even creating table by jpa
 #to delay that process of insertion
 spring.jpa.defer-datasource-initialization=true
+
+
+spring.security.oauth2.client.registration.github.client-id=Ov23linHFe5v4Ipt2zSg
+spring.security.oauth2.client.registration.github.client-secret=c18b4b1cc8609dec5e2e9f0a4422bccc0f5957b4
+
+spring.security.oauth2.client.registration.google.client-id=499518162612-r71dm5032fsb53fq2vplkgv7r2m85v16.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+
+razorpay.key.id=rzp_test_kheK7nZQZYEOeS
+razorpay.secret.key=utydsT5vrUIcC03N8ssq4IVl
+
+#mail configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=atharvashinde0906@gmail.com
+spring.mail.password=ybul ulbl iolk pqhg
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
