Remove sensitive data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,14 +19,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.defer-datasource-initialization=true
 
 
-spring.security.oauth2.client.registration.github.client-id=Ov23linHFe5v4Ipt2zSg
-spring.security.oauth2.client.registration.github.client-secret=c18b4b1cc8609dec5e2e9f0a4422bccc0f5957b4
+spring.security.oauth2.client.registration.github.client-id=REDACTED
+spring.security.oauth2.client.registration.github.client-secret=REDACTED
 
-spring.security.oauth2.client.registration.google.client-id=499518162612-r71dm5032fsb53fq2vplkgv7r2m85v16.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=REDACTED
+spring.security.oauth2.client.registration.google.client-secret=REDACTED
 
-razorpay.key.id=rzp_test_kheK7nZQZYEOeS
-razorpay.secret.key=utydsT5vrUIcC03N8ssq4IVl
+razorpay.key.id=REDACTED
+razorpay.secret.key=REDACTED
 
 #mail configuration
 spring.mail.host=smtp.gmail.com
