Added new functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,20 +19,20 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.defer-datasource-initialization=true
 
 
-spring.security.oauth2.client.registration.github.client-id=REDACTED
-spring.security.oauth2.client.registration.github.client-secret=REDACTED
+spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
+spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
 
-spring.security.oauth2.client.registration.google.client-id=REDACTED
-spring.security.oauth2.client.registration.google.client-secret=REDACTED
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 
-razorpay.key.id=REDACTED
-razorpay.secret.key=REDACTED
+razorpay.key.id=${RAZORPAY_KEY_ID}
+razorpay.secret.key=${RAZORPAY_SECRET_KEY}
 
 #mail configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=atharvashinde0906@gmail.com
-spring.mail.password=ybul ulbl iolk pqhg
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
